# high_speed_rail_chassis1

./: README.md  modi_together
modi35/: CMakeLists.txt  package.xml
modi35/config/: joint_names_modi35.yaml
modi35/launch/: display.launch  gazebo.launch
modi35/meshes/: Empty_Link1.STL  Empty_Link2.STL  Empty_Link3.STL  Empty_Link4.STL  Empty_Link5.STL  Empty_Link6.STL  Empty_Link7.STL  base_link.STL
modi35/robots/: modi35.urdf
modi35_moveit_config/: CMakeLists.txt  package.xml
modi35_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  modi35.srdf  ompl_planning.yaml
modi35_moveit_config/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
modi_send_msg_to_serial/: CMakeLists.txt  package.xml
modi_send_msg_to_serial/scripts/: modi_send_OG_to_serial.py  modi_send_msg_to_serial_xy.py  modi_send_stand_to_serial.py  modi_visual_msg_to_moveit.py  output.txt  plane.py
